--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.3
   uuid: ^3.0.6
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
