--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   rxdart: ^0.27.3
   uuid: ^3.0.6
   flutter_bloc: ^8.0.1
+  syncfusion_flutter_datepicker: ^19.4.56
 
 dev_dependencies:
   flutter_test:
