--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,17 @@ dependencies:
   uuid: ^3.0.6
   flutter_bloc: ^8.0.1
   syncfusion_flutter_datepicker: ^19.4.56
+  path: ^1.8.0
+  path_provider: ^2.0.9
+  drift: ^1.5.0
+  shared_preferences: ^0.5.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.8
+  drift_dev: ^1.5.2
 
 flutter:
   uses-material-design: true
