--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path_provider: ^2.0.9
   drift: ^1.5.0
   shared_preferences: ^2.0.13
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
