Change com.example -> me.chacham

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dongbaek">
+    package="me.chacham.dongbaek">
    <application
         android:label="dongbaek"
         android:name="${applicationName}"
