--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   protobuf: ^2.0.1
   fixnum: ^1.0.1
   collection: ^1.16.0
+  flutter_picker: ^2.0.5
 
 dev_dependencies:
   flutter_test:
