--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fixnum: ^1.0.1
   collection: ^1.16.0
   flutter_picker: ^2.0.5
+  dartx: ^1.1.0
 
 dev_dependencies:
   flutter_test:
