--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.0.13
   expandable: ^5.0.1
   protobuf: ^2.0.1
+  grpc: ^3.1.0
   fixnum: ^1.0.1
   collection: ^1.16.0
   flutter_picker: ^2.0.5
