Use protobuf repository as git submodule

--- a/.github/workflows/publish_web.yaml
+++ b/.github/workflows/publish_web.yaml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
