--- a/.github/workflows/publish_web.yaml
+++ b/.github/workflows/publish_web.yaml
@@ -1,4 +1,4 @@
-name: Publish test web app
+name: Publish web app to github pages
 
 on:
   push:
@@ -15,9 +15,7 @@ on:
 
 jobs:
   build:
-    name: Build test web app
-    env:
-      my_secret: ${{ secrets.ACCESS_TOKEN }}
+    name: Build web app for github pages
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
