--- a/.github/workflows/publish_web.yaml
+++ b/.github/workflows/publish_web.yaml
@@ -21,14 +21,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - uses: arduino/setup-protoc@v1
+      - uses: arduino/setup-protoc@v2
         with:
-          version: '3.x'
+          version: '23.x'
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
       - run: flutter pub get
-      - run: dart pub global activate protoc_plugin
+      - run: dart pub global activate protoc_plugin '<21.0.0'
       - run: ./build_proto.sh build
       - run: flutter pub run build_runner build
       - run: flutter build web --base-href "/dongbaek/"
