--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   sqlite3_flutter_libs: ^0.5.13
+  duration_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
